<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDashboardDark"
    tools:context="fitnesscompanion.com.View.SignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <fitnesscompanion.com.Util.CircleImageView
            android:onClick="onPicture"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center"
            android:id="@+id/imageProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:src="@drawable/logo_drawer"
            android:layout_alignParentLeft="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">
            <EditText
                android:id="@+id/editName"
                android:hint="@string/nickName"
                android:theme="@style/AppTheme"
                android:maxLength="255"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:textSize="10pt"
                android:textColor="@color/white"
                android:paddingLeft="5dp"
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/rgbGender"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rbMale"
                    android:textSize="8pt"
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rbFemale"
                    android:textSize="8pt"
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/txtGender"
            android:text="@string/error_required"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="@color/colorRed"
            android:textSize="8pt"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/editEmail"
                android:maxLength="255"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/editAddress"
            android:maxLength="255"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPass"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">
            <EditText
                android:id="@+id/editPass"
                android:maxLength="20"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPass2"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">
            <EditText
                android:id="@+id/editPass2"
                android:maxLength="20"
                android:hint="@string/passConfirm"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:onClick="onDateDialog"
                android:clickable="true"
                android:id="@+id/layoutDob"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">
                <EditText
                    android:onClick="onDateDialog"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:id="@+id/editDob"
                    android:inputType="none"
                    android:hint="@string/dob"
                    android:editable="false"
                    android:ems="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <ImageButton
                android:onClick="onDateDialog"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:layout_height="120px"
                android:layout_width="120px"
                android:src="@drawable/icon_dob"
                android:layout_gravity="center"
                android:layout_marginRight="40dp" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:onClick="onClear"
                android:layout_margin="10dp"
                android:background="@drawable/roundcorner"
                android:text="@string/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onSignUp"
                android:layout_margin="10dp"
                android:background="@drawable/roundcorner"
                android:text="@string/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
